# kattis-starter-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: compiler_features.cmake  compiler_warnings.cmake  sanitizers.cmake
kattis/: CMakeLists.txt
kattis/src/kattis/problems/: _template.hpp  addtwonumbers.hpp  main.cpp
kattis/src/kattis/shared/: shared_constants.hpp  shared_format.hpp  shared_string.hpp  shared_types.hpp
kattis_test/: CMakeLists.txt  GenerateTests.cmake
kattis_test/src/: precompiled.hpp  test_runner.cpp  test_runner.hpp  test_template.hpp.in
kattis_test/src/shared/: shared_format.cpp  shared_string.cpp
scripts/: .kattisrc.example  prepare  submit  test
